--- a/docentes.html
+++ b/docentes.html
@@ -107,7 +107,7 @@
           <li><a href="./egresados.html">Egresados</a></li>
           <li><a href="#">Biblioteca digital</a></li>
           <li><a href="#">Historias Destacadas</a></li>
-          <li><a href="#">Nuestro equipo</a></li>
+          <li><a href="./teamours.html">Nuestro equipo</a></li>
           <li><a href="#">PQR</a></li>
         </ul>
       </section>
