--- a/egresados2.html
+++ b/egresados2.html
@@ -106,20 +106,34 @@
           <li><a href="./emisora.html">Emisora</a></li>
           <li><a href="egresados.html">Egresados</a></li>
           <li><a href="#">Biblioteca digital</a></li>
-          <li><a href="#">Historias Destacadas</a></li>
+          <li><a href="./library.html">Historias Destacadas</a></li>
           <li><a href="#">Nuestro equipo</a></li>
-          <li><a href="#">PQR</a></li>
+          <li><a href="./teamours.html">PQR</a></li>
         </ul>
       </section>
     </header>
     <main>
       <section class="section-areas">
   <h2>Egresados</h2>
-  <ul class="list content-boton">
-    <li><button class="boton"><a href="egresados copy 2.html" class="a-btn">Nuestros egresados</a> </button></li>
+<ul class="list content-boton">
+  <div>
+    <li><button class="boton"><a href="egresados copy 2.html" class="a-btn">Ofertas laborales</a> </button></li>
+    <li><button class="boton"><a href="egresados copy 2.html" class="a-btn">Estudiantes Destacados</a> </button></li>
+  </div>
+</ul>
+<ul class="list content-boton">
+  <div>
     <li><button class="boton"><a href="egresados copy 3.html" class="a-btn">Ofertas Universitarias</a></button></li>
-    <li><button class="boton"><a href="egresados copy.html" class="a-btn">Ofertas del sena</a></button></li>
-  </ul>
+    <li><button class="boton"><a href="egresados copy 3.html" class="a-btn">Ofertas del sena</a> </button></li>
+  </div>
+</ul>
+<ul class="list content-boton">
+  <div>
+    <li><button class="boton"><a href="egresados copy 2.html" class="a-btn">Promociones</a> </button></li>
+  </div>
+</ul>
+  
+  
 </section>
     </main>
     <footer class="section-footer">
