--- a/estudiantes.html
+++ b/estudiantes.html
@@ -106,9 +106,9 @@
         <li><a href="#">Proyectos</a></li>
         <li><a href="./emisora.html">Emisora</a></li>
         <li><a href="./egresados.html">Egresados</a></li>
-        <li><a href="#">Biblioteca digital</a></li>
+        <li><a href="./library.html">Biblioteca digital</a></li>
         <li><a href="#">Historias Destacadas</a></li>
-        <li><a href="#">Nuestro equipo</a></li>
+        <li><a href="./teamours.html">Nuestro equipo</a></li>
         <li><a href="#">PQR</a></li>
       </ul>
     </section>
