--- a/library.html
+++ b/library.html
@@ -105,7 +105,7 @@
           <li><a href="#">Proyectos</a></li>
           <li><a href="./emisora.html">Emisora</a></li>
           <li><a href="./egresados.html">Egresados</a></li>
-          <li><a href="./library.html">Biblioteca digital</a></li>
+          <li><a href="./library.html">Biblioteca digital</a></li>          
           <li><a href="#">Historias Destacadas</a></li>
           <li><a href="./teamours.html">Nuestro equipo</a></li>
           <li><a href="#">PQR</a></li>
@@ -113,52 +113,14 @@
       </section>
     </header>
     <main>
-      <section class="info">
-        <img
-          src="./images/ejm.jpg"
-          width="1000px"
-          height="600px"
-          alt="Banner"
-        />
-      </section>
-      <section class=" section-areas pg-img" >
-        <h2 class="title-is">
-          Noticias de la semana
-        </h2>
-        <ul class="list pg">
-          <li class="pg-img">
-            <img src="./images/sen.jpg" width="94px" height="110px">
-            SENA </li>
-          <li class="pg-img">
-            <img src="./images/sed.jpg" width="100px" height="100px">
-            Secretaria de educación</li>
-          <li class="pg-img">
-            <img src="./images/ra.jpg" width="94px" height="110px">
-            Red academica</li>
-          <li class="pg-img" >
-            <img src="./images/ex.jpg" width="140px" height="110px">
-            Exploraneta</li>
-        </ul>
-      </section>
-      <section class=" section-areas pg-img" >
-        <h2 class="title-is">
-          Páginas sugeridas
-        </h2>
-        <ul class="list pg">
-          <li class="pg-img">
-            <img src="./images/sen.jpg" width="94px" height="110px">
-            SENA </li>
-          <li class="pg-img">
-            <img src="./images/sed.jpg" width="100px" height="100px">
-            Secretaria de educación</li>
-          <li class="pg-img">
-            <img src="./images/ra.jpg" width="94px" height="110px">
-            Red academica</li>
-          <li class="pg-img" >
-            <img src="./images/ex.jpg" width="140px" height="110px">
-            Exploraneta</li>
-        </ul>
-      </section>
+      <h2>HUMANIDADES</h2>
+      <h2>CIENCIAS SOCIALES</h2>
+      <h2>CIENCIAS NATURALES</h2>
+      <H3 class="h3b"> <a href="./zoologiada.html"> Conozca de zoología </a></H3>
+
+      <h2>MATEMÁTICAS</h2>
+      <h2>TECNOLOGÍA E INFORMÁTICA</h2>
+      <h2>TÉCNICA</h2>
     </main>
     <footer class="section-footer">
       <address class="content-footer">
