--- a/emisora.html
+++ b/emisora.html
@@ -36,12 +36,12 @@
       </ul>
       <ul class="list">
         <li class="menu-icon">
-          <svg class="icon-em">
+          <svg class="icon">
             <a href="https://twitter.com/TecnicoIed" target="_blank">
               <use href="./images/icons.svg#twitterx"></use>
             </a>
           </svg>
-          <svg class="icon-em">
+          <svg class="icon">
             <a
               href="https://www.instagram.com/explore/locations/587304262/colegio-tecnico-benjamin-herrera/?hl=es-la"
               target="_blank"
@@ -49,7 +49,7 @@
               <use xlink:href="./images/icons.svg#instagram"></use>
             </a>
           </svg>
-          <svg class="icon-em">
+          <svg class="icon">
             <a
               href="https://www.facebook.com/profile.php?id=100068460205322"
               target="_blank"
@@ -57,7 +57,7 @@
               <use xlink:href="./images/icons.svg#facebook"></use>
             </a>
           </svg>
-          <svg class="icon-em">
+          <svg class="icon">
             <a
               href="https://www.youtube.com/channel/UClUoMMpz80p3FMnFezyMSNw"
               target="_blank"
@@ -106,9 +106,9 @@
         <li><a href="#">Proyectos</a></li>
         <li><a href="./emisora.html">Emisora</a></li>
         <li><a href="./egresados.html">Egresados</a></li>
-        <li><a href="#">Biblioteca digital</a></li>
+        <li><a href="./library.html">Biblioteca digital</a></li>
         <li><a href="#">Historias Destacadas</a></li>
-        <li><a href="#">Nuestro equipo</a></li>
+        <li><a href="./teamours.html">Nuestro equipo</a></li>
         <li><a href="#">PQR</a></li>
       </ul>
     </section>
