--- a/teamours.html
+++ b/teamours.html
@@ -160,7 +160,7 @@
             </li>
             <li class="team-member">
               <img
-                src="./images/Hollman.jpg"
+                src="./images/hollman.jpg"
                 width="230"
                 height="290"
                 alt="Diseñador de productos"
