--- a/estudiantesI.html
+++ b/estudiantesI.html
@@ -27,12 +27,12 @@
             >Coordinación</a
           >
         </li>
-        <li><a href="./docentes.html">Docentes</a></li>
+        <li><a href="#">Docentes</a></li>
         <li><a href="./estudiantes.html">Estudiantes</a></li>
-        <li><a href="./padres.html">Padres de Familia</a></li>
-        <li><a href="./inclusión.html">Educación Inclusiva</a></li>
-        <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
-        <li><a href="./tecnica.html">Técnica</a></li>
+        <li><a href="#">Padres de Familia</a></li>
+        <li><a href="./inclusión.html">Inclucive educacion</a></li>
+        <li><a href="#">Orientación</a></li>
+        <li><a href="#">Técnica</a></li>
       </ul>
       <ul class="list">
         <li class="menu-icon">
@@ -103,12 +103,12 @@
         <li><a href="./index.html">Inicio</a></li>
         <li><a href="./institutional.html">Nuestra Institución</a></li>
         <li><a href="#">Noticias</a></li>
-        <li><a href="./proyectos.html">Proyectos</a></li>
+        <li><a href="#">Proyectos</a></li>
         <li><a href="./emisora.html">Emisora</a></li>
-        <li><a href="./egresados.html">Egresados</a></li>
-        <li><a href="./library.html">Biblioteca digital</a></li>
+        <li><a href="#">Egresados</a></li>
+        <li><a href="#">Biblioteca digital</a></li>
         <li><a href="#">Historias Destacadas</a></li>
-        <li><a href="./teamours.html">Nuestro equipo</a></li>
+        <li><a href="#">Nuestro equipo</a></li>
         <li><a href="#">PQR</a></li>
       </ul>
     </section>
