--- a/egresados.html
+++ b/egresados.html
@@ -87,12 +87,16 @@
         </ul>
         <ul class="list">
           <li>
+            <a href="./index.html">
             <button value="Español" class="btn-lang1">
-              <a href="./index.html"></a>
+             
             </button>
+          </a>
+            <a href="./index.html">
             <button value="Inglés" class="btn-lang2">
-              <a href="./padres.html"></a>
+            
             </button>
+          </a>
           </li>
         </ul>
       </section>
@@ -102,7 +106,7 @@
           <li><a href="./index.html">Inicio</a></li>
           <li><a href="./institutional.html">Nuestra Institución</a></li>
           <li><a href="#">Noticias</a></li>
-          <li><a href="#">Proyectos</a></li>
+          <li><a href="./proyectos.html">Proyectos</a></li>
           <li><a href="./emisora.html">Emisora</a></li>
           <li><a href="./egresados.html">Egresados</a></li>
           <li><a href="./library.html">Biblioteca digital</a></li>
@@ -113,17 +117,17 @@
       </section>
     </header>
     <main>
-      <section class="content-subtitles">
-      <div class="imagen-banner">
-                          <ul class="list">
-                            <li><p style="text-align:center;"><img src="./images/colegio.jpg" width="60%" height="40%" alt="Banner main"></p></li>
-                          </ul>
-                      </div>
-                      <ul class="list content-boton">
-                        <li><button class="boton"><a href="./egresados2.html" class="a-btn">Nuestros egresados</a> </button></li>
-                      </ul>
-                      </section>
-                          </main>
+      <section class="section-areas">
+        <ul class="list content-botone">
+          <li><button class="botone"><a href="egresados copy 2.html" class="a-btn">Nuestras promociones</a></button></li>
+      <li><button class="botone"><a href="egresados copy 2.html" class="a-btn">Ofertas laborales</a></button></li>
+      <li><button class="botone"><a href="egresados copy 3.html" class="a-btn">Ofertas universitarias</a></button></li>
+      <li><button class="botone"><a href="https://agenciapublicadeempleo.sena.edu.co/Paginas/Inicio.aspx" class="a-btn">Ofertas con el sena</a></button></li>
+      <li><button class="botone"><a href="egresados copy 3.html" class="a-btn">Nuestros egresados</a></button></li>
+      <li><button class="botone"><a href="egresados copy 2.html" class="a-btn">Estudiantes destacados</a></button></li>
+        </ul>
+      </section>
+    </main>
     <footer class="section-footer">
       <address class="content-footer">
         <ul class="list sede">
