--- a/emisoraI.html
+++ b/emisoraI.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <title>Colegio Técnico Benjamín herrera</title>
+  <title>School tecnhical Benjamín herrera</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/styles.css">
@@ -17,22 +17,21 @@
           <a
             href="http://rectoriabenjaminherrera.blogspot.com/"
             target="_blank"
-            >Rectoria</a
+            >Rectory</a
           >
         </li>
         <li>
           <a
             href="https://sites.google.com/view/coldibenjamin"
             target="_blank"
-            >Coordinación</a
-          >
+            >Coordination</a>
         </li>
-        <li><a href="./docentes.html">Docentes</a></li>
-        <li><a href="./estudiantes.html">Estudiantes</a></li>
-        <li><a href="./padres.html">Padres de Familia</a></li>
-        <li><a href="./inclusión.html">Educación Inclusiva</a></li>
-        <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
-        <li><a href="./tecnica.html">Técnica</a></li>
+        <li><a href="#">Teachers</a></li>
+        <li><a href="./estudiantes.html">Estudients</a></li>
+        <li><a href="#">Family parents</a></li>
+        <li><a href="./inclusión.html"></a>Inclucive educacion</li>
+        <li><a href="#">Orientation</a></li>
+        <li><a href="#">Técnhical</a></li>
       </ul>
       <ul class="list">
         <li class="menu-icon">
@@ -79,11 +78,10 @@
           alt="Escudo"
         />
         <li class="menu-ident-column">
-          <h1>Colegio Técnico Benjamín Herrera I.E.D</h1>
-          <i
-            >Educación e innovación para la trascendencia y la
-            transformación</i
-          >
+          <h1>School Tecnhical Benjamín Herrera I.E.D</h1>
+          <i>
+            Education and innovation for transcendence and transformation
+          </i>
         </li>
       </ul>
       <ul class="list">
@@ -100,96 +98,96 @@
 
     <section class="menu3">
       <ul class="menu-horizontal">
-        <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./institutional.html">Nuestra Institución</a></li>
-        <li><a href="#">Noticias</a></li>
-        <li><a href="./proyectos.html">Proyectos</a></li>
-        <li><a href="./emisora.html">Emisora</a></li>
-        <li><a href="./egresados.html">Egresados</a></li>
-        <li><a href="./library.html">Biblioteca digital</a></li>
-        <li><a href="#">Historias Destacadas</a></li>
-        <li><a href="./teamours.html">Nuestro equipo</a></li>
+        <li><a href="./index.html">Start</a></li>
+        <li><a href="./institutional.html">Our Institution</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Proyects</a></li>
+        <li><a href="./emisora.html">Radio station</a></li>
+        <li><a href="#">Graduates</a></li>
+        <li><a href="#">Digital libery</a></li>
+        <li><a href="#">History featured</a></li>
+        <li><a href="#">Our equip</a></li>
         <li><a href="#">PQR</a></li>
       </ul>
     </section>
   </header>
   <main>
     <section class="emisora-radio-joven">
-      <h1>RADIO JOVEN</h1>
-      <p>Emisora donde los estudiantes .ETC..</p>
+      <h1>YOUTH RADIO</h1>
+      <p>station where students .ETC..</p>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
@@ -200,77 +198,77 @@
       <p>Emisora donde los estudiantes cuantas sodre, ETC..</p>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element<code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element<code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
@@ -279,77 +277,77 @@
       <h1>POSIBLES EMISRAS A FUTURO</h1> 
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul>
       <ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
       </ul><ul class="list content-programs">
         <li class="programs-2"> 15/01/2023</li>
-        <li class="programs">Redes sociales seguras</li>
+        <li class="programs">safe social networks</li>
       <li><audio src="./audios/9.aup3" controls="controls">  
-        Tu navegador no soporta el elemento <code>audio</code>.
+        your browser does not support the element <code>audio</code>.
         <li><svg class="icon-container-rad">
           <use href="./images/icons.svg#download"></use>
         </svg></li>
