--- a/indexI.html
+++ b/indexI.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Colegio Técnico Benjamín herrera</title>
+    <title>School tecnhical benjamin Herrera</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -16,22 +16,21 @@
             <a
               href="http://rectoriabenjaminherrera.blogspot.com/"
               target="_blank"
-              >Rectoría</a
+              >Rectory</a
             >
           </li>
           <li>
             <a
               href="https://sites.google.com/view/coldibenjamin"
               target="_blank"
-              >Coordinación</a
-            >
+              >Coordination</a>
           </li>
-          <li><a href="./docentes.html">Docentes</a></li>
-          <li><a href="/Consaberes/estudiantes.html">Estudiantes</a></li>
-          <li><a href="./padres.html">Padres de Familia</a></li>
-          <li><a href="./inclusión.html">Educación Inclusiva</a></li>
-          <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
-          <li><a href="./tecnica.html">Técnica</a></li>
+          <li><a href="#">Teachers</a></li>
+          <li><a href="/Consaberes/estudiantes.html">Estudients</a></li>
+          <li><a href="#">Family parents</a></li>
+          <li><a href="./inclusión.html">Inclucive educacion</a></li>
+          <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientation</a></li>
+          <li><a href="#">Tecnhical</a></li>
         </ul>
         <ul class="list">
           <li class="menu-icon">
@@ -78,56 +77,62 @@
             alt="Escudo"
           />
           <li class="menu-ident-column">
-            <h1>Colegio Técnico Benjamín Herrera I.E.D</h1>
-            <i
-              >Educación e innovación para la trascendencia y la
-              transformación</i
-            >
+            <h1>Benjamín Herrera Tenhichal School I.E.D</h1>
+            <i>
+              Education and innovation for transcendence and transformation</i>
           </li>
         </ul>
         <ul class="list">
           <li>
+            <a href="./index.html">
             <button value="Español" class="btn-lang1">
-              <a href="./index.html"></a>
             </button>
+              </a>
+             </li> 
+             <li>
+              <a href="./indexI.html">
             <button value="Inglés" class="btn-lang2">
-              <a href="./padres.html"></a>
             </button>
+              </a>
+           
           </li>
         </ul>
       </section>
 
       <section class="menu3">
         <ul class="menu-horizontal">
-          <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./institutional.html">Nuestra Institución</a></li>
-          <li><a href="#">Noticias</a></li>
-          <li><a href="./proyectos.html">Proyectos</a></li>
-          <li><a href="./emisora.html">Emisora</a></li>
-          <li><a href="./egresados.html">Egresados</a></li>
-          <li><a href="./library.html">Biblioteca digital</a></li>
-          <li><a href="#">Historias Destacadas</a></li>
-          <li><a href="./teamours.html">Nuestro equipo</a></li>
+          <li><a href="./index.html">Start</a></li>
+          <li><a href="./institutional.html">Our Institution</a></li>
+          <li><a href="#">News</a></li>
+          <li><a href="#">Proyects</a></li>
+          <li><a href="./emisora.html">radio station</a></li>
+          <li><a href="#">Graduates</a></li>
+          <li><a href="#">digitaly libery</a></li>
+          <li><a href="#">History featured</a></li>
+          <li><a href="#">Our equip</a></li>
           <li><a href="#">PQR</a></li>
         </ul>
       </section>
     </header>
     <main>
-      <h2>HUMANIDADES</h2>
-      <h2>CIENCIAS SOCIALES</h2>
-      <h2>CIENCIAS NATURALES</h2>
-      <H3 class="h3b"> <a href="./zoologiada.html"> Conozca de zoología </a></H3>
-
-      <h2>MATEMÁTICAS</h2>
-      <h2>TECNOLOGÍA E INFORMÁTICA</h2>
-      <h2>TÉCNICA</h2>
+      <section class="info">
+        <img
+          src="./images/ejm.jpg"
+          width="1000px"
+          height="600px"
+          alt="Banner"
+        />
+      </section>
+      <section>
+        <h2></h2>
+      </section>
     </main>
     <footer class="section-footer">
       <address class="content-footer">
         <ul class="list sede">
-          <li><h2>Sede A</h2></li>
-          <li>Carrera 51A Nº 26 - 38 sur</li>
-          <li>Localidad Puente Aranda - Barrio Alcalá</li>
+          <li><h2>headquarters A</h2></li>
+          <li>Carrera 51A Nº 26 - 38 South</li>
+          <li>Aranda bridge town - neighborhood Alcalá</li>
           <li>
             <a href="mailto:info@educacionbogota.com" class="af"
               >coldibenjaminherre16@educacionbogota.edu.co</a
@@ -140,9 +145,9 @@
           </li>
         </ul>
         <ul class="list sede">
-          <li><h2>Sede B-Francia</h2></li>
-          <li>Carrera 51c #33-41 Sur, Bogotá</li>
-          <li>Localidad Puente Aranda - Barrio Alcalá</li>
+          <li><h2>headquarters B-Francia</h2></li>
+          <li>Carrera 51c #33-41 South, Bogotá</li>
+          <li>Aranda bridge town - neighborhood Alcalá</li>
           <li>
             <a href="mailto:info@educacionbogota.com" class="af"
               >coldibenjaminherre16@educacionbogota.edu.co</a
@@ -153,9 +158,9 @@
           </li>
         </ul>
         <ul class="list sede">
-          <li><h2>Sede C-Tayrona</h2></li>
+          <li><h2>headquarters C-Tayrona</h2></li>
           <li>Calle 29 Sur #41 A-42, Bogotá</li>
-          <li>Localidad Puente Aranda - Santa Rita</li>
+          <li>Aranda bridge town - Santa Rita</li>
           <li>
             <a href="mailto:info@educacionbogota.com" class="af"
               >coldibenjaminherre16@educacionbogota.edu.co</a
