--- a/teamours.html
+++ b/teamours.html
@@ -102,7 +102,7 @@
           <li><a href="./index.html">Inicio</a></li>
           <li><a href="./institutional.html">Nuestra Institución</a></li>
           <li><a href="#">Noticias</a></li>
-          <li><a href="#">Proyectos</a></li>
+          <li><a href="./proyectos.html">Proyectos</a></li>
           <li><a href="./emisora.html">Emisora</a></li>
           <li><a href="./egresados.html">Egresados</a></li>
           <li><a href="./library.html">Biblioteca digital</a></li>
@@ -160,7 +160,7 @@
             </li>
             <li class="team-member">
               <img
-                src="./images/hollman.jpg"
+                src="./images/Hollman.jpg"
                 width="230"
                 height="290"
                 alt="Diseñador de productos"
