--- a/zoologiada.html
+++ b/zoologiada.html
@@ -102,10 +102,10 @@
           <li><a href="./index.html">Inicio</a></li>
           <li><a href="./institutional.html">Nuestra Institución</a></li>
           <li><a href="#">Noticias</a></li>
-          <li><a href="#">Proyectos</a></li>
+          <li><a href="./proyectos.html">Proyectos</a></li>
           <li><a href="./emisora.html">Emisora</a></li>
           <li><a href="./egresados.html">Egresados</a></li>
-          <li><a href="#">Biblioteca digital</a></li>
+          <li><a href="./library.html">Biblioteca digital</a></li>
           <li><a href="#">Historias Destacadas</a></li>
           <li><a href="./teamours.html">Nuestro equipo</a></li>
           <li><a href="#">PQR</a></li>
