--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </ul>
         <ul class="list">
           <li>
-            < href="./index.html">
+            <a href="./index.html">
             <button value="Español" class="btn-lang1">
             </button>
               </>
