--- a/docentesI.html
+++ b/docentesI.html
@@ -86,13 +86,15 @@
       </ul>
       <ul class="list">
         <li>
+          <a href="./docentes.html">
           <button value="Español" class="btn-lang1">
-            <a href="./index.html"></a>
           </button>
+            </a>
+            <a href="./docentesI.html">
           <button value="Inglés" class="btn-lang2">
-            <a href="./padres.html"></a>
           </button>
-        </li>
+            </a>
+         </li>
       </ul>
     </section>
 
