--- a/egresados.html
+++ b/egresados.html
@@ -87,16 +87,14 @@
         </ul>
         <ul class="list">
           <li>
-            <a href="./index.html">
+            <a href="./egresados.html">
             <button value="Español" class="btn-lang1">
-             
             </button>
-          </a>
-            <a href="./index.html">
+              </a>
+              <a href="./egresadosI.html">
             <button value="Inglés" class="btn-lang2">
-            
             </button>
-          </a>
+              </a>           
           </li>
         </ul>
       </section>
