--- a/egresadosI.html
+++ b/egresadosI.html
@@ -29,7 +29,7 @@
           <li><a href="./docentes.html">Docentes</a></li>
           <li><a href="/Consaberes/estudiantes.html">Estudiantes</a></li>
           <li><a href="./padres.html">Padres de Familia</a></li>
-          <li><a href="./inclusion.html">Educación Inclusiva</a></li>
+          <li><a href="./inclusión.html">Educación Inclusiva</a></li>
           <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
           <li><a href="./tecnica.html">Técnica</a></li>
         </ul>
@@ -88,10 +88,10 @@
         <ul class="list">
           <li>
             <button value="Español" class="btn-lang1">
-              <a href="./library.html"></a>
+              <a href="./index.html"></a>
             </button>
             <button value="Inglés" class="btn-lang2">
-              <a href="./libraryI.html"></a>
+              <a href="./padres.html"></a>
             </button>
           </li>
         </ul>
@@ -102,7 +102,7 @@
           <li><a href="./index.html">Inicio</a></li>
           <li><a href="./institutional.html">Nuestra Institución</a></li>
           <li><a href="#">Noticias</a></li>
-          <li><a href="./proyectos.html">Proyectos</a></li>
+          <li><a href="#">Proyectos</a></li>
           <li><a href="./emisora.html">Emisora</a></li>
           <li><a href="./egresados.html">Egresados</a></li>
           <li><a href="./library.html">Biblioteca digital</a></li>
@@ -113,27 +113,17 @@
       </section>
     </header>
     <main>
-     <section class="content-section">
-      <hr>
-      <h2>CIENCIAS NATURALES</h2>
-      <H3 class="h3b"> <a href="./zoologia.html"> Conozca de zoología </a></H3>
-      <p>Trabajo elaborado por la estudiante Giada Pugnali Grande grado 1102 jornada tarde escrito rn español e italiano</p>
-      <hr>
-      <h2>CIENCIAS SOCIALES</h2>
-      <hr>
-      
-<hr>
-<h2>HUMANIDADES</h2>
-<hr>
-
-      <h2>MATEMÁTICAS</h2>
-      <hr>
-      <h2>TECNOLOGÍA E INFORMÁTICA</h2>
-      <hr>
-      <h2>TÉCNICA</h2>
-      <hr>
-    </section>
-    </main>
+      <section class="content-subtitles">
+      <div class="imagen-banner">
+                          <ul class="list">
+                            <li><p style="text-align:center;"><img src="./images/colegio.jpg" width="60%" height="40%" alt="Banner main"></p></li>
+                          </ul>
+                      </div>
+                      <ul class="list content-boton">
+                        <li><button class="boton"><a href="./egresados2.html" class="a-btn">Nuestros egresados</a> </button></li>
+                      </ul>
+                      </section>
+                          </main>
     <footer class="section-footer">
       <address class="content-footer">
         <ul class="list sede">
