--- a/inclusionI.html
+++ b/inclusionI.html
@@ -28,7 +28,7 @@
           >
         </li>
         <li><a href="#">Teachers</a></li>
-        <li><a href="./estudiantes.html">Estudients</a></li>
+        <li><a href="./estudiantesI.html">Estudients</a></li>
         <li><a href="#">family parents</a></li>
         <li><a href="./inclusión.html">Inclucive educacion</a></li>
         <li><a href="#">Orientation</a></li>
