--- a/indexI.html
+++ b/indexI.html
@@ -101,11 +101,11 @@
 
       <section class="menu3">
         <ul class="menu-horizontal">
-          <li><a href="./index.html">Start</a></li>
-          <li><a href="./institutional.html">Our Institution</a></li>
+          <li><a href="./indexI.html">Start</a></li>
+          <li><a href="./institutionalI.html">Our Institution</a></li>
           <li><a href="#">News</a></li>
           <li><a href="#">Proyects</a></li>
-          <li><a href="./emisora.html">radio station</a></li>
+          <li><a href="./emisoraI.html">radio station</a></li>
           <li><a href="#">Graduates</a></li>
           <li><a href="#">digitaly libery</a></li>
           <li><a href="#">History featured</a></li>
