--- a/institutional.html
+++ b/institutional.html
@@ -30,7 +30,7 @@
         <li><a href="./docentes.html">Docentes</a></li>
         <li><a href="./estudiantes.html">Estudiantes</a></li>
         <li><a href="./padres.html">Padres de Familia</a></li>
-        <li><a href="./inclusión.html">Educación Inclusiva</a></li>
+        <li><a href="./inclusion.html">Educación Inclusiva</a></li>
         <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
         <li><a href="./tecnica.html">Técnica</a></li>
       </ul>
@@ -88,12 +88,14 @@
       </ul>
       <ul class="list">
         <li>
+          <a href="./institutional.html">
           <button value="Español" class="btn-lang1">
-            <a href="./index.html"></a>
           </button>
+            </a>
+            <a href="./institutionalI.html">
           <button value="Inglés" class="btn-lang2">
-            <a href="./padres.html"></a>
           </button>
+            </a>           
         </li>
       </ul>
     </section>
@@ -122,7 +124,7 @@
         </ul>
     </div>
     <div class="video">
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/N5nni-VLl_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>      
+    <iframe width="880" height="615" src="https://www.youtube.com/embed/N5nni-VLl_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>      
     </div>
     <div class="subtitles">
               <ul class="list">
