--- a/institutionalI.html
+++ b/institutionalI.html
@@ -30,7 +30,7 @@
         <li><a href="#">Docentes</a></li>
         <li><a href="./estudiantes.html">Estudiantes</a></li>
         <li><a href="#">Padres de Familia</a></li>
-        <li><a href="./inclusión.html">Educación Inclusiva</a></li>
+        <li><a href="./inclusion.html">Educación Inclusiva</a></li>
         <li><a href="#">Orientación</a></li>
         <li><a href="#">Técnica</a></li>
       </ul>
