--- a/padres.html
+++ b/padres.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <title>Colegio Técnico Benjamín herrera</title>
+    <title>Colegio Técnico Benjamín Herrera</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
@@ -29,7 +29,7 @@
           <li><a href="./docentes.html">Docentes</a></li>
           <li><a href="/Consaberes/estudiantes.html">Estudiantes</a></li>
           <li><a href="./padres.html">Padres de Familia</a></li>
-          <li><a href="./inclusión.html">Educación Inclusiva</a></li>
+          <li><a href="./inclusion.html">Educación Inclusiva</a></li>
           <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
           <li><a href="./tecnica.html">Técnica</a></li>
         </ul>
@@ -88,10 +88,10 @@
         <ul class="list">
           <li>
             <button value="Español" class="btn-lang1">
-              <a href="./index.html"></a>
+              <a href="./padres.html"></a>
             </button>
             <button value="Inglés" class="btn-lang2">
-              <a href="./padres.html"></a>
+              <a href="./padresI.html"></a>
             </button>
           </li>
         </ul>
