--- a/emisoraI.html
+++ b/emisoraI.html
@@ -86,12 +86,14 @@
       </ul>
       <ul class="list">
         <li>
+          <a href="./emisora.html">
           <button value="Español" class="btn-lang1">
-            <a href="./index.html"></a>
           </button>
+            </a>
+            <a href="./emisoraI.html">
           <button value="Inglés" class="btn-lang2">
-            <a href="./padres.html"></a>
           </button>
+            </a>           
         </li>
       </ul>
     </section>
