--- a/estudiantesI.html
+++ b/estudiantesI.html
@@ -88,12 +88,14 @@
       </ul>
       <ul class="list">
         <li>
+          <a href="./estudiantes.html">
           <button value="Español" class="btn-lang1">
-            <a href="./index.html"></a>
           </button>
+            </a>
+            <a href="./estudiantesI.html">
           <button value="Inglés" class="btn-lang2">
-            <a href="./padres.html"></a>
           </button>
+            </a>           
         </li>
       </ul>
     </section>
