--- a/tecnica.html
+++ b/tecnica.html
@@ -29,7 +29,7 @@
           <li><a href="./docentes.html">Docentes</a></li>
           <li><a href="/Consaberes/estudiantes.html">Estudiantes</a></li>
           <li><a href="./padres.html">Padres de Familia</a></li>
-          <li><a href="./inclusión.html">Educación Inclusiva</a></li>
+          <li><a href="./inclusion.html">Educación Inclusiva</a></li>
           <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
           <li><a href="./tecnica.html">Técnica</a></li>
         </ul>
