--- a/teamours.html
+++ b/teamours.html
@@ -138,7 +138,7 @@
               height="290"
               alt="Diseñador de productos"
             />
-            <h3 class="team-member-name">Giovanny Cruz</h3>
+            <h3 class="team-member-name">Giovanni Cruz</h3>
             <p class="team-member-position">Docente humanidades</p>
             <p class="team-member-position">Jornada tarde</p>
           </div>
