--- a/zoologia.html
+++ b/zoologia.html
@@ -92,7 +92,7 @@
             </button>
               </a>
               <a href="./zoologiada.html">
-            <button value="Inglés" class="btn-lang3">
+            <button value="Italiano" class="btn-lang3">
             </button>
               </a>
            
