--- a/institutional.html
+++ b/institutional.html
@@ -124,7 +124,7 @@
         </ul>
     </div>
     <div class="video">
-    <iframe width="880" height="615" src="https://www.youtube.com/embed/N5nni-VLl_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>      
+    <CENTER><iframe width="560" height="315" src="https://www.youtube.com/embed/N5nni-VLl_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  </CENTER>    
     </div>
     <div class="subtitles">
               <ul class="list">
