--- a/teamours.html
+++ b/teamours.html
@@ -117,7 +117,7 @@
       <section class="section-areas">
         <div class="container flex-container">
           <h2>Nuestro Equipo</h2>
-          <ul class="list menu-horizontal">
+          <ul class="list menu-horizontal section-areas">
           <img src="./images/fotogrupal.jpg" width="700px" height="500px" alt="Nuestro equipo desarrollador">
           <li>
           </div>
@@ -163,7 +163,7 @@
             </li>
             <li class="team-member">
               <img
-                src="./images/Hollman.jpg"
+                src="./images/hollman.jpg"
                 width="200"
                 height="270"
                 alt="Diseñador de productos"
