--- a/estudiantes.html
+++ b/estudiantes.html
@@ -103,7 +103,7 @@
     <section class="menu3">
       <ul class="menu-horizontal">
         <li><a href="./index.html">Inicio</a></li>
-        <li><a href="./institutional.html">Nuestra Institución</a></li>
+        <li><a href="./institutional-copy.html">Nuestra Institución</a></li>
         <li><a href="#">Noticias</a></li>
         <li><a href="./proyectos.html">Proyectos</a></li>
         <li><a href="./emisora.html">Emisora</a></li>
