--- a/institutional-copy.html
+++ b/institutional-copy.html
@@ -17,13 +17,15 @@
           <a
             href="http://rectoriabenjaminherrera.blogspot.com/"
             target="_blank"
-            >Rectoria</a>
+            >Rectoria</a
+          >
         </li>
         <li>
           <a
             href="https://sites.google.com/view/coldibenjamin"
             target="_blank"
-            >Coordinación</a>
+            >Coordinación</a
+          >
         </li>
         <li><a href="./docentes.html">Docentes</a></li>
         <li><a href="./estudiantes.html">Estudiantes</a></li>
@@ -86,11 +88,11 @@
       </ul>
       <ul class="list">
         <li>
-          <a href="./emisora.html">
+          <a href="./institutional-copy.html">
           <button value="Español" class="btn-lang1">
           </button>
             </a>
-            <a href="./emisoraI.html">
+            <a href="./institutionalI.html">
           <button value="Inglés" class="btn-lang2">
           </button>
             </a>           
@@ -114,25 +116,49 @@
     </section>
   </header>
   <main>
-    <section class="section-areas" >
-    <ul class="list al-aire">
-      <li>
-    <button>
-      <a target="_blank" href="https://sites.google.com/view/benjamin-al-aire-emisora-virtu/inicio">
-      <img  src="images/logo_benjamín_al_aire.jpeg" width="400px" height="400px"></a>
-    </button>
-      <h2 class="center" >Benjamín Al Aire </h2>
-    </li>
-  <li>
-    <button>
-      <a target="_blank" href="./emisorajv.html">
-      <img  src="images/r_joven.jpg" width="400px" height="400px"></a>
-    </button>
-      <h2 class="center">Radio Joven </h2>
-    </ul>
-  </li>
-    </section>
-    </main> 
+    <section class="content-section">
+            
+      <div class="subtitles">
+        <ul class="list">
+            <li><h2 class="btninst-text">Nuestro himno</h2></li>
+        </ul>
+    </div>
+    <div class="video">
+    <CENTER><iframe width="560" height="315" src="https://www.youtube.com/embed/N5nni-VLl_I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>  </CENTER>    
+    </div>
+    <div class="subtitles">
+              <ul class="list">
+                  <li><h2 class="btninst-text">Misión</h2></li>
+              </ul>
+          </div>
+          <p class="content-subtitlesins">Formar integralmente a los estudiantes desde una perspectiva de desarrollo humano
+                            incluyente, caracterizada por la vivencia de valores, principios y cualidades éticas, enel ejercicio
+                            y la construcción de conocimiento y la formación técnica del saber; a través del desarrollo de
+                            competencias básicas, técnicas, comunicativas y laborales; que le permita el acceso ala educación
+                            superior y responda a las necesidades dinámicas de la sociedad, preservando el medio ambiente,
+                            respetando la diversidad en un ámbito democrático y participativo.
+                            </p>
+                            <div class="info">
+                            <img src="./images/ben tras.png" width="400px" height="550px" alt="Banner Ins"/>
+                          </div>
+                          <div class="subtitles">
+                            <ul class="list">
+                                <li><h2 class="btninst-text">Visión</h2></li>
+                            </ul>
+                        </div>
+                        <p>En el año 2020, el Colegio Técnico Benjamín Herrera IED será reconocido por su proyecto
+                            pedagógico, orientado hacia la formación en valores y la participación democrática e incluyente
+                            de los estudiantes como ciudadanos críticos, ereativos y propositivos; quienes a través de su
+                            desarrollo humano, excelente desempeño académico y técnico, trasciendan como agentes
+                            transformadores e innovadores del entorno al servicio de la comunidad y la sociedad</p>
+                      
+                        <ul class="list">
+                        <li>
+                        <button class="btninst"> <a href="https://www.redacademica.edu.co/sites/default/files/2023-01/Benjamin%20Herrera%202022%20Nuevo.pdf" target="_blank" class="btninst-text">Manual de convivencia</a></button>
+                        </li>
+                      </ul>
+                        </section>
+                      </main>
   <footer class="section-footer">
     <address class="content-footer">
       <ul class="list sede">
