--- a/egresados.html
+++ b/egresados.html
@@ -27,9 +27,9 @@
             >
           </li>
           <li><a href="./docentes.html">Docentes</a></li>
-          <li><a href="/Consaberes/estudiantes.html">Estudiantes</a></li>
+          <li><a href="./estudiantes.html">Estudiantes</a></li>
           <li><a href="./padres.html">Padres de Familia</a></li>
-          <li><a href="./inclusión.html">Educación Inclusiva</a></li>
+          <li><a href="./inclusion.html">Educación Inclusiva</a></li>
           <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
           <li><a href="./tecnica.html">Técnica</a></li>
         </ul>
@@ -102,7 +102,7 @@
       <section class="menu3">
         <ul class="menu-horizontal">
           <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./institutional.html">Nuestra Institución</a></li>
+          <li><a href="./institutional-copy.html">Nuestra Institución</a></li>
           <li><a href="#">Noticias</a></li>
           <li><a href="./proyectos.html">Proyectos</a></li>
           <li><a href="./emisora.html">Emisora</a></li>
