--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="es">
   <head>
     <title>Colegio Técnico Benjamín herrera</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com; crossorigin" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com;crossorigin">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
   </head>
-  <body>
-    <header class="content">
+    <header>
+      <div class="line">
       <nav class="menu">
         <ul class="list menu-horizontal-sup">
           <li>
@@ -27,9 +27,9 @@
             >
           </li>
           <li><a href="./docentes.html">Docentes</a></li>
-          <li><a href="/Consaberes/estudiantes.html">Estudiantes</a></li>
+          <li><a href="./estudiantes.html">Estudiantes</a></li>
           <li><a href="./padres.html">Padres de Familia</a></li>
-          <li><a href="./inclusión.html">Educación Inclusiva</a></li>
+          <li><a href="./inclusion.html">Educación Inclusiva</a></li>
           <li><a href="https://mamasypapasbh.blogspot.com/" target="_blank">Orientación</a></li>
           <li><a href="./tecnica.html">Técnica</a></li>
         </ul>
@@ -67,16 +67,12 @@
           </li>
         </ul>
       </nav>
-      <hr size="1px" color="#dddbdb" />
-
+    </div> 
       <section class="menu2">
         <ul class="list menu-ident">
-          <img
-            src="./images/logo_colegio.png"
-            width="100px"
-            height="100px"
-            alt="Escudo"
-          />
+          <li>
+          <img src="./images/logo_colegio.png" width="100" height="100" alt="Escudo">
+        </li>
           <li class="menu-ident-column">
             <h1>Colegio Técnico Benjamín Herrera I.E.D</h1>
             <i
@@ -100,10 +96,10 @@
         </ul>
       </section>
 
-      <section class="menu3">
+      <div class="menu3">
         <ul class="menu-horizontal">
           <li><a href="./index.html">Inicio</a></li>
-          <li><a href="./institutional.html">Nuestra Institución</a></li>
+          <li><a href="./institutional-copy.html">Nuestra Institución</a></li>
           <li><a href="#">Noticias</a></li>
           <li><a href="./proyectos.html">Proyectos</a></li>
           <li><a href="./emisora.html">Emisora</a></li>
@@ -113,34 +109,29 @@
           <li><a href="./teamours.html">Nuestro equipo</a></li>
           <li><a href="#">PQR</a></li>
         </ul>
-      </section>
+      </div>
     </header>
     <main>
-   
-      <section class="info">
-        <img
-          src="./images/ejm.jpg"
-          width="1000px"
-          height="600px"
-          alt="Banner"
-        />
-      </section>
+      
+      <ul class="info">
+        <img src="./images/ejm.jpg" width="1000" height="600" alt="Banner">
+      </ul>
       <section class=" section-areas pg-img" >
         <h2 class="title-is">
           Noticias de la semana
         </h2>
         <ul class="list pg">
           <li class="pg-img">
-            <img src="./images/sen.jpg" width="94px" height="110px">
-            SENA </li>
+            <img src="./images/sen.jpg" width="94" height="110" alt="Sena">
+            SENA</li>
           <li class="pg-img">
-            <img src="./images/sed.jpg" width="100px" height="100px">
+            <img src="./images/sed.jpg" width="100" height="100" alt="Secretaria-de-educación">
             Secretaria de educación</li>
           <li class="pg-img">
-            <img src="./images/ra.jpg" width="94px" height="110px">
+            <img src="./images/ra.jpg" width="94" height="110" alt="Red-academica">
             Red academica</li>
           <li class="pg-img" >
-            <img src="./images/ex.jpg" width="140px" height="110px">
+            <img src="./images/ex.jpg" width="140" height="110" alt="Exploraneta">
             Exploraneta</li>
         </ul>
       </section>
@@ -150,16 +141,16 @@
         </h2>
         <ul class="list pg">
           <li class="pg-img">
-            <img src="./images/sen.jpg" width="94px" height="110px">
+            <img src="./images/sen.jpg" width="94" height="110" alt="Sena">
             SENA </li>
           <li class="pg-img">
-            <img src="./images/sed.jpg" width="100px" height="100px">
+            <img src="./images/sed.jpg" width="100" height="100" alt="Secretaria-de-educación">
             Secretaria de educación</li>
           <li class="pg-img">
-            <img src="./images/ra.jpg" width="94px" height="110px">
+            <img src="./images/ra.jpg" width="94" height="110" alt="Red-academica">
             Red academica</li>
           <li class="pg-img" >
-            <img src="./images/ex.jpg" width="140px" height="110px">
+            <img src="./images/ex.jpg" width="140" height="110" alt="Exploraneta">
             Exploraneta</li>
         </ul>
       </section>
@@ -168,7 +159,7 @@
     <footer class="section-footer">
       <address class="content-footer">
         <ul class="list sede">
-          <li><h2>Sede A</h2></li>
+          <li>Sede A</li>
           <li>Carrera 51A Nº 26 - 38 sur</li>
           <li>Localidad Puente Aranda - Barrio Alcalá</li>
           <li>
@@ -183,7 +174,7 @@
           </li>
         </ul>
         <ul class="list sede">
-          <li><h2>Sede B-Francia</h2></li>
+          <li>Sede B-Francia</li>
           <li>Carrera 51c #33-41 Sur, Bogotá</li>
           <li>Localidad Puente Aranda - Barrio Alcalá</li>
           <li>
@@ -196,17 +187,15 @@
           </li>
         </ul>
         <ul class="list sede">
-          <li><h2>Sede C-Tayrona</h2></li>
+          <li>Sede C-Tayrona</li>
           <li>Calle 29 Sur #41 A-42, Bogotá</li>
           <li>Localidad Puente Aranda - Santa Rita</li>
           <li>
             <a href="mailto:info@educacionbogota.com" class="af"
               >coldibenjaminherre16@educacionbogota.edu.co</a
             >
-          </li>
-          <li>          
+          </li>        
               <li><a href="tel:+523002861876" class="af">2028525</a></li>  
-          </li>
         </ul>
       </address>
     </footer>
